@@ -15,6 +15,8 @@ h3. Version 2.5.0 (NOT OFFICIALLY RELEASED YET)
 </dependency>
 ```
 
+* @GroupByPipe@ and @GroupByReducePipe@ now take a @Collection@ instead of a @List@ for the @Map@ value that stores results.
+
 ==<hr/>==
 
 h3. Version 2.4.0 (August 4, 2013)
